<resources>
    <string name="app_name">Note</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="title_activity_editor">Editor</string>
    <string name="hello_world">Hello world!</string>
    <string name="textHeader">Note Header</string>
    <string name="textNote">Note Text</string>
    <string name="saveButton">Save</string>
    <string name="sendButton">Send</string>
    <string name="listHeader">Notes List</string>
    <string name="backButton">Back</string>
    <string name="delButton">Delete</string>
    <string name="navigation_subheader">Create Note</string>
    <string name="navigation_item_1">New note</string>
    <string name="navigation_item_2">Clear base</string>
    <string name="textEmail">Email</string>
    <string name="sendText">Send</string>
    <string name="offlineText">Offline</string>
</resources>
